# Slope-Overload

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
Reaktor/: README.md  Slope Overload.ens
source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
source/DSP/: BasicClippers.h  DeltaModulation.cpp  DeltaModulation.h  OnePoleEQFilter.cpp  OnePoleEQFilter.h
source/UI/: PixelScope.cpp  PixelScope.h  RadioButtonComponent.cpp  RadioButtonComponent.h  TextSlider.cpp  TextSlider.h
source/Utilities/: FiFo.h  ParameterListener.h
